@@ -21,8 +21,8 @@
 }
 table.navigation 
 {
-  background: #ffeeee;
-  border: solid 1px #ffaaaa;
+  background: #eeeeee;
+  border: solid 1px #ffaa00;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
