@@ -1,3 +1,9 @@
+2005-05-03  Florian Boor  <florian@kernelconcepts.de>
+
+	* db.c: Documented last symbol. 
+	* configure.ac: Version to 0.5, require gtk-doc 1.2.
+	* doc/gtk-doc.make, doc/Makefile.am: Move to template gtkdoc stuff.
+
 2005-04-15  Florian Boor  <florian@kernelconcepts.de>
 
 	* Add autotools support, removed Makefiles.
